# ocl-algebra

./: Cargo.toml  LICENSE-MIT  README.md
examples/: simple.rs
src/: kernel.rs  lib.rs
