[package]
name = "ocl-algebra"
version = "0.1.0"
authors = ["Timo Haas <haastimo@gmx.de>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
description = "low level Linear Algebra library for OpenCL"

# These URLs point to more information about the repository.
documentation = "https://github.com/timohaas/ocl-algebra"
homepage = "https://github.com/timohaas/ocl-algebra"
repository = "https://github.com/timohaas/ocl-algebra"

# This points to a file in the repository (relative to this `Cargo.toml`). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["opencl", "ocl", "linear", "algebra"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can be
# separated with a `/`.
license = "MIT/Apache-2.0"

[dependencies]
ocl = "0.11"
